--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- Premission for Internet -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-
 
     <application
         android:allowBackup="true"
@@ -20,44 +16,33 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".DetalhesSeccaoActivity"
+            android:name=".Views.DetalhesSeccaoActivity"
             android:exported="false"
             android:label="Tira Senhas"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".Views.MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <!-- Talvez de para trocar este activity -->
         <activity
-            android:name=".ListaProdutos"
+            android:name=".Views.DetalhesProdutosActivity"
+            android:parentActivityName=".Views.MainActivity"
             android:exported="false"
-            android:label="Dados"
-            android:parentActivityName=".MainActivity">
+            android:label="Dados">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DetalhesProdutosActivity"
-            android:exported="false"
-            android:label="Dados"
-            android:parentActivityName=".ListaProdutos">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".MainActivity"
+            android:name=".Views.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value=".MainActivity" />
