--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,6 +17,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Views.DetalhesMoradaActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Views.DetalhesSeccaoActivity"
             android:exported="false"
             android:label="Tira Senhas"
@@ -26,9 +34,9 @@
         </activity>
         <activity
             android:name=".Views.DetalhesProdutosActivity"
-            android:parentActivityName=".Views.MainActivity"
             android:exported="false"
-            android:label="Dados">
+            android:label="Dados"
+            android:parentActivityName=".Views.MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -36,18 +44,19 @@
         <activity
             android:name=".Views.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:label="@string/app_name">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value=".MainActivity" />
         </activity>
     </application>
-
 
 </manifest>
