--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +17,7 @@
         android:theme="@style/Theme.StuffNGo"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
         <activity
             android:name=".Views.DetalhesSeccaoActivity"
             android:exported="false"
@@ -50,12 +54,6 @@
             android:name=".Views.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.StuffNGo.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
