--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,17 @@
         tools:targetApi="31">
         <service android:name="org.eclipse.paho.android.service.MqttService" />
         <activity
+            android:name=".Views.CarrinhoActivity"
+            android:exported="false"
+            android:parentActivityName=".Views.MainActivity"/>
+        <activity
+            android:name=".Views.DetalhesMoradaActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Views.DetalhesSeccaoActivity"
             android:exported="false"
             android:label="Tira Senhas"
