--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Views.DetalhesEncomendaActivity"
-            android:parentActivityName=".Views.DetalhesEncomendaActivity"
+            android:parentActivityName=".Views.EncomendaActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -45,6 +45,7 @@
             android:parentActivityName=".Views.MainActivity" />
         <activity
             android:name=".Views.DetalhesMoradaActivity"
+            android:parentActivityName=".Views.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
